--- a/app/src/main/res/layout-land/fragment_game_picker.xml
+++ b/app/src/main/res/layout-land/fragment_game_picker.xml
@@ -106,7 +106,7 @@
         app:layout_constraintTop_toBottomOf="@+id/buttonScan" />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/listDestinations"
+        android:id="@+id/listTargets"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
