--- a/app/src/main/res/layout-land/fragment_game_picker.xml
+++ b/app/src/main/res/layout-land/fragment_game_picker.xml
@@ -30,7 +30,7 @@
     android:background="@drawable/paper_tiled"
     android:keepScreenOn="true"
     android:padding="32dp"
-    tools:context="by.klnvch.link5dots.multiplayer.online.OnlineGameActivity">
+    tools:context="by.klnvch.link5dots.multiplayer.activities.GameActivityOnline">
 
     <ToggleButton
         android:id="@+id/buttonCreate"
