--- a/app/src/main/res/layout/activity_online_game.xml
+++ b/app/src/main/res/layout/activity_online_game.xml
@@ -28,7 +28,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="by.klnvch.link5dots.multiplayer.online.OnlineGameActivity">
+    tools:context="by.klnvch.link5dots.multiplayer.activities.GameActivityOnline">
 
     <FrameLayout
         android:id="@+id/fragmentContainer"
