--- a/app/src/main/res/layout-land/item_history.xml
+++ b/app/src/main/res/layout-land/item_history.xml
@@ -69,7 +69,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/time_picker_title"
-            app:layout_constraintTop_toBottomOf="@+id/textTypeLabel" />
+            app:layout_constraintTop_toBottomOf="@+id/textUser2Name" />
 
         <TextView
             android:id="@+id/textTimeColon"
@@ -77,7 +77,7 @@
             android:layout_height="wrap_content"
             android:text="@string/colon"
             app:layout_constraintStart_toEndOf="@+id/textTimeLabel"
-            app:layout_constraintTop_toBottomOf="@+id/textTypeLabel" />
+            app:layout_constraintTop_toBottomOf="@+id/textUser2Name" />
 
         <TextView
             android:id="@+id/textTimeValue"
@@ -87,7 +87,7 @@
             android:layout_marginLeft="8dp"
             android:text="@string/device_info_default"
             app:layout_constraintStart_toEndOf="@+id/textTimeColon"
-            app:layout_constraintTop_toBottomOf="@+id/textTypeLabel" />
+            app:layout_constraintTop_toBottomOf="@+id/textUser2Name" />
 
         <TextView
             android:id="@+id/textTypeLabel"
@@ -95,25 +95,25 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/vpn_type"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/textTypeColon"
             app:layout_constraintTop_toBottomOf="@+id/textUser2Name" />
 
         <TextView
             android:id="@+id/textTypeColon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
             android:text="@string/colon"
-            app:layout_constraintStart_toEndOf="@+id/textTypeLabel"
+            app:layout_constraintEnd_toStartOf="@+id/textTypeValue"
             app:layout_constraintTop_toBottomOf="@+id/textUser2Name" />
 
         <TextView
             android:id="@+id/textTypeValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
             android:text="@string/device_info_default"
-            app:layout_constraintStart_toEndOf="@+id/textTypeColon"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textUser2Name" />
 
         <TextView
