--- a/app/src/main/res/menu/menu_game_offline.xml
+++ b/app/src/main/res/menu/menu_game_offline.xml
@@ -22,16 +22,14 @@
   ~ SOFTWARE.
   -->
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:id="@+id/menu_undo"
+        android:icon="@android:drawable/ic_menu_close_clear_cancel"
+        android:title="@string/end_undo" />
+
     <item
         android:id="@+id/menu_new_game"
         android:icon="@android:drawable/ic_menu_rotate"
         android:title="@string/end_new_game" />
-
-    <item
-        android:id="@+id/menu_search"
-        android:icon="@android:drawable/ic_menu_search"
-        android:title="@android:string/search_go"
-        app:showAsAction="always" />
 </menu>
