--- a/app/src/main/res/layout/item_high_score.xml
+++ b/app/src/main/res/layout/item_high_score.xml
@@ -49,7 +49,7 @@
         android:id="@+id/scoreMoves"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="3"
+        android:layout_weight="2"
         android:lines="1"
         android:text="@string/scores_moves"
         android:textAppearance="?android:attr/textAppearanceMedium" />
@@ -58,7 +58,8 @@
         android:id="@+id/scoreTime"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="2"
+        android:layout_weight="3"
+        android:gravity="end"
         android:lines="1"
         android:text="@string/scores_time"
         android:textAppearance="?android:attr/textAppearanceMedium" />
@@ -68,6 +69,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="3"
+        android:gravity="end"
         android:lines="1"
         android:text="@string/scores_status"
         android:textAppearance="?android:attr/textAppearanceMedium" />
