--- a/app/src/main/res/layout-land/activity_info.xml
+++ b/app/src/main/res/layout-land/activity_info.xml
@@ -112,7 +112,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:onClick="onClick"
-        android:text="@string/device_feedback"
+        android:text="@string/connection_error_message"
         app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal" />
