--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -83,7 +83,7 @@
         android:id="@+id/main_menu_settings"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/settings_label"
+        android:contentDescription="@string/settings"
         android:onClick="onClick"
         android:src="@drawable/ic_settings_48dp"
         app:layout_constraintEnd_toStartOf="@+id/main_menu_about"
@@ -105,7 +105,7 @@
         android:id="@+id/main_menu_how_to"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/how_to_title"
+        android:contentDescription="@string/help"
         android:onClick="onClick"
         android:src="@drawable/ic_help_48dp"
         app:layout_constraintEnd_toEndOf="parent"
