--- a/app/src/main/res/layout/game_board.xml
+++ b/app/src/main/res/layout/game_board.xml
@@ -28,12 +28,12 @@
     android:background="#FF000000">
 
     <by.klnvch.link5dots.GameView
-        android:id="@+id/game_view"
+        android:id="@+id/gameView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/game_info"
+        android:id="@+id/gameInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top|end"
@@ -47,20 +47,20 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/text_user_name"
+                android:id="@+id/textUser1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:drawablePadding="8dp"
                 android:gravity="center"
-                android:text="@string/device_info_default" />
+                android:text="@string/unknown" />
 
             <TextView
-                android:id="@+id/text_opponent_name"
+                android:id="@+id/textUser2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:drawablePadding="8dp"
                 android:gravity="center"
-                android:text="@string/android" />
+                android:text="@string/computer" />
 
         </LinearLayout>
 
