--- a/app/src/main/res/layout/item_high_score.xml
+++ b/app/src/main/res/layout/item_high_score.xml
@@ -42,7 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="4"
         android:lines="1"
-        android:text="@string/scores_name"
+        android:text="@string/name"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
@@ -61,7 +61,7 @@
         android:layout_weight="3"
         android:gravity="end"
         android:lines="1"
-        android:text="@string/scores_time"
+        android:text="@string/time"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
@@ -71,7 +71,7 @@
         android:layout_weight="3"
         android:gravity="end"
         android:lines="1"
-        android:text="@string/scores_status"
+        android:text="@string/status"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
 </LinearLayout>
