--- a/app/src/main/res/menu/menu_game_fragment.xml
+++ b/app/src/main/res/menu/menu_game_fragment.xml
@@ -27,6 +27,6 @@
     <item
         android:id="@+id/menu_search"
         android:icon="@android:drawable/ic_menu_search"
-        android:title="@string/search_menu"
+        android:title="@string/search"
         app:showAsAction="always" />
 </menu>
