--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -36,18 +36,20 @@
         style="@style/TextAppearance.AppCompat.Headline"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="16dp"
+        android:padding="16dp"
         android:gravity="center"
         app:layout_constraintBottom_toTopOf="@+id/main_menu_single_player"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        tools:text="Hi, Unknown!" />
 
     <Button
         android:id="@+id/main_menu_single_player"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/ic_android_48dp"
         android:drawableStart="@drawable/ic_android_48dp"
+        android:drawableLeft="@drawable/ic_android_48dp"
         android:onClick="onClick"
         android:text="@string/menu_single_player"
         app:layout_constraintBottom_toTopOf="@+id/main_menu_multi_player"
@@ -58,8 +60,8 @@
         android:id="@+id/main_menu_multi_player"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/ic_person_48dp"
         android:drawableStart="@drawable/ic_person_48dp"
+        android:drawableLeft="@drawable/ic_person_48dp"
         android:onClick="onClick"
         android:text="@string/menu_multi_player"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -71,8 +73,8 @@
         android:id="@+id/main_menu_scores"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/ic_star_48dp"
         android:drawableStart="@drawable/ic_star_48dp"
+        android:drawableLeft="@drawable/ic_star_48dp"
         android:onClick="onClick"
         android:text="@string/scores_title"
         app:layout_constraintEnd_toEndOf="parent"
