--- a/app/src/main/res/layout-land/activity_main_menu.xml
+++ b/app/src/main/res/layout-land/activity_main_menu.xml
@@ -36,11 +36,13 @@
         style="@style/TextAppearance.AppCompat.Headline"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="16dp"
+        android:padding="16dp"
         android:gravity="center"
         app:layout_constraintBottom_toTopOf="@+id/main_menu_single_player"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        tools:text="Hi, Unknown!" />
 
     <Button
         android:id="@+id/main_menu_single_player"
