--- a/app/src/main/res/layout/dialog_new_game.xml
+++ b/app/src/main/res/layout/dialog_new_game.xml
@@ -37,9 +37,9 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:gravity="center"
         android:hint="@string/seed_hint"
         android:inputType="numberDecimal"
+        android:minHeight="@dimen/clickable_min_size"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
