--- a/app/src/main/res/layout/item_room.xml
+++ b/app/src/main/res/layout/item_room.xml
@@ -31,7 +31,8 @@
     android:layout_margin="4dp"
     android:clickable="true"
     android:focusable="true"
-    android:foreground="?android:attr/selectableItemBackground"
+    android:background="?android:attr/selectableItemBackground"
+    android:minHeight="@dimen/clickable_min_size"
     card_view:cardCornerRadius="8dp"
     card_view:contentPadding="8dp">
 
