--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -38,4 +38,6 @@
     <!-- bluetooth picker layout -->
     <dimen name="separator_width">2dp</dimen>
     <dimen name="bt_text_size">14sp</dimen>
+
+    <dimen name="clickable_min_size">48dp</dimen>
 </resources>
