--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -41,35 +41,27 @@
         android:id="@+id/imageViewAppIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
+        android:background="@color/foreground_color"
         android:contentDescription="@string/app_name"
-        app:layout_constraintBottom_toTopOf="@+id/textViewAppName"
+        android:padding="2dp"
+        app:layout_constraintBottom_toTopOf="@+id/textViewAppVersion"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@mipmap/ic_launcher" />
 
     <TextView
-        android:id="@+id/textViewAppName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:text="@string/app_name"
-        app:layout_constraintBottom_toTopOf="@+id/textViewAppVersion"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
         android:id="@+id/textViewAppVersion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/version_text"
+        android:textColor="@color/foreground_color"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -78,8 +70,8 @@
         android:id="@+id/buttonInfoCode"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:onClick="onClick"
         android:text="@string/btn_github"
         app:layout_constraintEnd_toEndOf="parent"
@@ -90,8 +82,8 @@
         android:id="@+id/buttonInfoRate"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:onClick="onClick"
         android:text="@string/rate_this_app"
         app:layout_constraintEnd_toEndOf="parent"
@@ -102,8 +94,8 @@
         android:id="@+id/buttonInfoFeedback"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:onClick="onClick"
         android:text="@string/send_mail"
         app:layout_constraintEnd_toEndOf="parent"
@@ -114,8 +106,8 @@
         android:id="@+id/buttonInfoShare"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:onClick="onClick"
         android:text="@string/share"
         app:layout_constraintEnd_toEndOf="parent"
