--- a/app/src/main/res/layout-land/activity_info.xml
+++ b/app/src/main/res/layout-land/activity_info.xml
@@ -79,6 +79,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:onClick="onClick"
         android:text="@string/btn_github"
         app:layout_constraintBottom_toTopOf="@+id/buttonInfoRate"
@@ -91,6 +93,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:onClick="onClick"
         android:text="@string/rate_this_app"
         app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
@@ -103,6 +107,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:onClick="onClick"
         android:text="@string/send_mail"
         app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
@@ -115,6 +121,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:onClick="onClick"
         android:text="@string/share"
         app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
