--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -72,6 +72,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:onClick="onClick"
         android:text="@string/btn_github"
         app:layout_constraintEnd_toEndOf="parent"
@@ -84,6 +86,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:onClick="onClick"
         android:text="@string/rate_this_app"
         app:layout_constraintEnd_toEndOf="parent"
@@ -96,6 +100,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:onClick="onClick"
         android:text="@string/send_mail"
         app:layout_constraintEnd_toEndOf="parent"
@@ -108,6 +114,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:onClick="onClick"
         android:text="@string/share"
         app:layout_constraintEnd_toEndOf="parent"
