--- a/app/src/main/res/layout/fragment_game_picker.xml
+++ b/app/src/main/res/layout/fragment_game_picker.xml
@@ -149,6 +149,7 @@
 
     <TextView
         android:id="@+id/textWarningEmpty"
+        style="@style/TextAppearance.AppCompat.Large"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/search_no_results"
@@ -156,6 +157,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/progressScan" />
+        app:layout_constraintTop_toBottomOf="@+id/progressScan"
+        tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
