--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -29,9 +29,9 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:layout_margin="4dp"
+    android:background="?android:attr/selectableItemBackground"
     android:clickable="true"
     android:focusable="true"
-    android:background="?android:attr/selectableItemBackground"
     card_view:cardCornerRadius="8dp"
     card_view:contentPadding="8dp">
 
@@ -43,12 +43,12 @@
             android:id="@+id/textUser1Name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawableStart="@drawable/game_dot_circle_red"
-            android:drawableLeft="@drawable/game_dot_circle_red"
             android:drawablePadding="8dp"
             android:gravity="center"
             android:text="@string/unknown"
             android:textStyle="bold"
+            app:drawableLeftCompat="@drawable/game_dot_circle_red"
+            app:drawableStartCompat="@drawable/game_dot_circle_red"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -56,12 +56,12 @@
             android:id="@+id/textUser2Name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawableStart="@drawable/game_dot_circle_blue"
-            android:drawableLeft="@drawable/game_dot_circle_blue"
             android:drawablePadding="8dp"
             android:gravity="center"
             android:text="@string/computer"
             android:textStyle="bold"
+            app:drawableLeftCompat="@drawable/game_dot_circle_blue"
+            app:drawableStartCompat="@drawable/game_dot_circle_blue"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
