--- a/app/src/main/res/layout-land/fragment_multiplayer_menu.xml
+++ b/app/src/main/res/layout-land/fragment_multiplayer_menu.xml
@@ -29,7 +29,14 @@
     android:layout_height="match_parent"
     android:background="@drawable/paper_tiled"
     android:padding="32dp"
-    tools:context="by.klnvch.link5dots.MultiPlayerMenuActivity">
+    tools:context="by.klnvch.link5dots.ui.menu.MultiPlayerMenuActivity">
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineVertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineHorizontal"
@@ -46,8 +53,8 @@
         android:drawableStart="@drawable/ic_people_48dp"
         android:onClick="onClick"
         android:text="@string/menu_two_players"
-        app:layout_constraintBottom_toTopOf="@+id/multi_player_bluetooth"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
+        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
@@ -60,7 +67,7 @@
         android:text="@string/bluetooth"
         app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/multi_player_two_players" />
 
     <Button
         android:id="@+id/multi_player_lan"
@@ -70,7 +77,7 @@
         android:drawableStart="@drawable/ic_router_48dp"
         android:onClick="onClick"
         android:text="@string/menu_local_network"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontal" />
 
@@ -83,7 +90,7 @@
         android:onClick="onClick"
         android:text="@string/menu_online_game"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/multi_player_lan" />
+        app:layout_constraintStart_toEndOf="@+id/guidelineVertical"
+        app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontal" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
