--- a/app/src/main/res/layout/fragment_multiplayer_menu.xml
+++ b/app/src/main/res/layout/fragment_multiplayer_menu.xml
@@ -29,14 +29,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/paper_tiled"
     android:padding="32dp"
-    tools:context="by.klnvch.link5dots.MultiPlayerMenuActivity">
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guidelineVertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.5" />
+    tools:context="by.klnvch.link5dots.ui.menu.MultiPlayerMenuActivity">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineHorizontal"
@@ -53,8 +46,8 @@
         android:drawableStart="@drawable/ic_people_48dp"
         android:onClick="onClick"
         android:text="@string/menu_two_players"
-        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
-        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
+        app:layout_constraintBottom_toTopOf="@+id/multi_player_bluetooth"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
@@ -67,7 +60,7 @@
         android:text="@string/bluetooth"
         app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/multi_player_two_players" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/multi_player_lan"
@@ -77,7 +70,7 @@
         android:drawableStart="@drawable/ic_router_48dp"
         android:onClick="onClick"
         android:text="@string/menu_local_network"
-        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontal" />
 
@@ -90,7 +83,7 @@
         android:onClick="onClick"
         android:text="@string/menu_online_game"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/guidelineVertical"
-        app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontal" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/multi_player_lan" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
